<resources>
    <string name="app_name">Api Call</string>
    <string name="logo_description">App Logo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="signup_text">Don\'t have an account? Sign Up</string>
</resources>