<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

    <!--        android:src="@drawable/logo"-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logo_description"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:padding="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/button_color"
        android:padding="12dp"
        android:text="@string/login_button_text"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password_text"
        android:textColor="@color/link_color" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/signup_text"
        android:textColor="@color/link_color" />

</RelativeLayout>
